src/parser/tests/snapshots/mathemascii__parser__tests__sub_sup_scripts__complex_subscripts.snap
---
source: src/parser/tests/sub_sup_scripts.rs
expression: "Snapshot((*input, math))"
---
lim_(N->oo) sum_(i=0)^N

Interm {
  IntermExpr {
    Function(Lim)
      sub:
        OpenParen
          Interm {
            IntermExpr {
              Variable("N")
            }
          }
          
          Interm {
            IntermExpr {
              Arrow(To)
            }
          }
          
          Interm {
            IntermExpr {
              Other(Infinity)
            }
          }
        CloseParen
  }
}

Interm {
  IntermExpr {
    Operator(Sum)
      sub:
        OpenParen
          Interm {
            IntermExpr {
              Variable("i")
            }
          }
          
          Interm {
            IntermExpr {
              Relation(Eq)
            }
          }
          
          Interm {
            IntermExpr {
              Number("0")
            }
          }
        CloseParen
      sub:
        Variable("N")
  }
}


