src/parser/tests/snapshots/mathemascii__parser__tests__sub_sup_scripts__n_to_infty.snap
---
source: src/parser/tests/sub_sup_scripts.rs
expression: "Snapshot((input, math))"
---
n->oo

Interm {
| IntermExpr {
| | Variable("n")
| }
}

Interm {
| IntermExpr {
| | Arrow(To)
| }
}

Interm {
| IntermExpr {
| | Other(Infinity)
| }
}


