src/parser/tests/snapshots/mathemascii__parser__tests__sub_sup_scripts__n_to_infty_grouping.snap
---
source: src/parser/tests/sub_sup_scripts.rs
expression: "Snapshot((input, math))"
---
(n->oo)

Expression {
| OpenParen
| | Expression {
| | | Variable("n")
| | }
| | 
| | Expression {
| | | Arrow(To)
| | }
| | 
| | Expression {
| | | Other(Infinity)
| | }
| |
| CloseParen
}


