src/parser/tests/snapshots/mathemascii__parser__tests__sub_sup_scripts__wrong_order.snap
---
source: src/parser/tests/sub_sup_scripts.rs
expression: "Snapshot((input, math))"
---
sum^N_(N->oo)

Expression {
| Operator(Sum)
| | sup:
| | | Variable("N")
}

Expression {
| Other(Subscript)
}

Expression {
| OpenParen
| | Expression {
| | | Variable("N")
| | }
| | 
| | Expression {
| | | Arrow(To)
| | }
| | 
| | Expression {
| | | Other(Infinity)
| | }
| |
| CloseParen
}


